--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
+    "mavon-editor": "^2.9.0",
     "vue": "^2.6.11",
+    "vue-cropperjs": "^4.1.0",
+    "vue-i18n": "^8.18.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
+    "vue-schart": "^1.0.0",
+    "vuedraggable": "^2.24.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
